[gd_scene load_steps=6 format=3 uid="uid://c5xfo2rravo4v"]

[ext_resource type="Script" path="res://Scenes/Menu/multi_player.gd" id="1_8tafm"]
[ext_resource type="Texture2D" uid="uid://ofmyoeyq4hpc" path="res://assets/Menu/Background.jpg" id="1_nijvy"]
[ext_resource type="Texture2D" uid="uid://bg4u2vqjqw2mn" path="res://assets/Menu/prev.png" id="2_u5oyr"]
[ext_resource type="Texture2D" uid="uid://ctclrm82phm6k" path="res://assets/Menu/NextArrow.png" id="4_6qi13"]
[ext_resource type="AudioStream" uid="uid://csqwwe8v4hmh8" path="res://assets/Sounds/Lvl4.wav" id="5_r4tv3"]

[node name="MultiPlayer" type="Node"]
script = ExtResource("1_8tafm")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nijvy")

[node name="Start" type="Button" parent="Background"]
layout_mode = 0
offset_left = 344.0
offset_top = 472.0
offset_right = 810.0
offset_bottom = 530.0
text = "Start"

[node name="PlayerSelection" type="HSplitContainer" parent="."]
offset_left = 230.0
offset_top = 41.0
offset_right = 940.0
offset_bottom = 445.0

[node name="Player1" type="VBoxContainer" parent="PlayerSelection"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.0

[node name="Label" type="Label" parent="PlayerSelection/Player1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.768627, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 30
text = "Player 1's  Character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Character1" type="HBoxContainer" parent="PlayerSelection/Player1"]
layout_mode = 2

[node name="Previous" type="Button" parent="PlayerSelection/Player1/Character1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("2_u5oyr")
icon_alignment = 1

[node name="Character1" type="TextureRect" parent="PlayerSelection/Player1/Character1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="Next" type="Button" parent="PlayerSelection/Player1/Character1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("4_6qi13")

[node name="Player2" type="VBoxContainer" parent="PlayerSelection"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.0

[node name="Label" type="Label" parent="PlayerSelection/Player2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.768627, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 30
text = "Player 2's Character"

[node name="Character2" type="HBoxContainer" parent="PlayerSelection/Player2"]
layout_mode = 2

[node name="Previous2" type="Button" parent="PlayerSelection/Player2/Character2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("2_u5oyr")
icon_alignment = 1

[node name="Character2" type="TextureRect" parent="PlayerSelection/Player2/Character2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="Next2" type="Button" parent="PlayerSelection/Player2/Character2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("4_6qi13")

[node name="Back" type="Button" parent="."]
offset_left = 1007.0
offset_top = 595.0
offset_right = 1119.0
offset_bottom = 626.0
text = "Back"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_r4tv3")
autoplay = true

[connection signal="pressed" from="Background/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PlayerSelection/Player1/Character1/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="PlayerSelection/Player1/Character1/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="PlayerSelection/Player2/Character2/Previous2" to="." method="_on_previous_2_pressed"]
[connection signal="pressed" from="PlayerSelection/Player2/Character2/Next2" to="." method="_on_next_2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
